# serial-hunter

./: README.md  planning.txt  pyproject.toml
src/serialhunter/: __init__.py  pretty_codec.py  pretty_unicode_codec.py  x_code_escape_errors.py
tests/: mock_serial.py  test_pretty_codec.py
